--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-paper-scissor</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="resp.css"> -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="resp.css">
 </head>
 <body>
     <h1>Rock-paper-scissor</h1>
