--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-paper-scissor</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="resp.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <h1>Rock-paper-scissor</h1>
